--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -6,6 +6,6 @@
         Groups Coming Soon!
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close groups</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close groups</div>
 
 </div>
