--- a/src/app/helpers/toast-helper/toast-helper.component.html
+++ b/src/app/helpers/toast-helper/toast-helper.component.html
@@ -11,10 +11,10 @@
         <table class='spotbie-confirm-table'>
             <tr>
                 <td (click)="confirm()">
-                    <div class='spotbie-button spotbie-button-mini'>{{ helper_config.text.confirm }}</div>
+                    <div class='sb-button sb-button-mini'>{{ helper_config.text.confirm }}</div>
                 </td>
                 <td (click)="decline()">
-                    <div class='spotbie-button spotbie-button-mini'>{{ helper_config.text.decline }}</div>
+                    <div class='sb-button sb-button-mini'>{{ helper_config.text.decline }}</div>
                 </td>
             </tr>
         </table>
