--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class='backgroundImg'></div>
+<div class='sb-backgroundImg'></div>
 
 <div class="spotbie-main-holder" id="spotbieMainHolder">
 
