--- a/src/app/spotbie/location-saver/location-saver.component.html
+++ b/src/app/spotbie/location-saver/location-saver.component.html
@@ -56,7 +56,7 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindowX()">
+    <div class="sb-closeButton" (click)="closeWindowX()">
         <i class="fa fa-times"></i>
     </div>
 
