--- a/src/app/spotbie/location-saver/my-places/my-places.component.html
+++ b/src/app/spotbie/location-saver/my-places/my-places.component.html
@@ -23,7 +23,7 @@
 
 </div>     
 
-<div class='spotbie-load-more-button spotbie-button' *ngIf="loadMore" (click)="loadMorePlaces()">load more</div>
+<div class='spotbie-load-more-button sb-button' *ngIf="loadMore" (click)="loadMorePlaces()">load more</div>
 
 <div class='spotbie-no-notis-box' *ngIf="noPlaces">
     <div>
