--- a/src/app/spotbie/profile-header/albums/view-media/view-media.component.html
+++ b/src/app/spotbie/profile-header/albums/view-media/view-media.component.html
@@ -73,6 +73,6 @@
         <i class="fa fa-link spotbie-album-media-share-link" aria-hidden="true" (click)="shareAlbumMedia()"></i>    
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
+    <div class="sb-closeButton" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
 </div>
