--- a/src/app/spotbie/profile-header/questions-answer/questions-answer.component.html
+++ b/src/app/spotbie/profile-header/questions-answer/questions-answer.component.html
@@ -22,7 +22,7 @@
                                 All answers are required.
                             </div>                                                  
                         </div>                                       
-                        <input class='spotbie-input' formControlName="spotbie_answer_1" maxlength="60" placeholder="Answer # 1" />                        
+                        <input class='sb-input' formControlName="spotbie_answer_1" maxlength="60" placeholder="Answer # 1" />                        
                     </td>
                 </tr>
                 <tr>
@@ -40,7 +40,7 @@
                                 All answers are required.
                             </div>                                                  
                         </div>                                         
-                        <input class='spotbie-input' formControlName="spotbie_answer_2" maxlength="60" placeholder="Answer # 2"/>                        
+                        <input class='sb-input' formControlName="spotbie_answer_2" maxlength="60" placeholder="Answer # 2"/>                        
                     </td>
                 </tr>
                 <tr>
@@ -58,7 +58,7 @@
                                 All questions are required.
                             </div>                                                  
                         </div>                                        
-                        <input class='spotbie-input' formControlName="spotbie_answer_3" maxlength="60" placeholder="Answer # 3" />                        
+                        <input class='sb-input' formControlName="spotbie_answer_3" maxlength="60" placeholder="Answer # 3" />                        
                     </td>
                 </tr>
             </table>
@@ -73,9 +73,9 @@
                 </tr>                               
             </table>
 
-            <div class='spotbie-button spotbie-button-mini' (click)="sendRequest()">Send Request</div>
+            <div class='sb-button sb-button-mini' (click)="sendRequest()">Send Request</div>
 
-            <div class='spotbie-button spotbie-button-mini' (click)="cancel()">Cancel</div>
+            <div class='sb-button sb-button-mini' (click)="cancel()">Cancel</div>
         </form>
 
     </div>
