--- a/src/app/spotbie/profile-header/questions/questions.component.html
+++ b/src/app/spotbie/profile-header/questions/questions.component.html
@@ -28,7 +28,7 @@
                                 Question # 1
                             </div>
                         </ng-template>                     
-                        <input class='spotbie-input' formControlName="spotbie_question_1"  maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_question_1"  maxlength="60" />                        
                     </td>
                 </tr>
                 <tr>
@@ -46,7 +46,7 @@
                                 Answer # 1
                             </div>
                         </ng-template>                  
-                        <input class='spotbie-input' formControlName="spotbie_answer_1" maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_answer_1" maxlength="60" />                        
                     </td>
                 </tr>
                 <tr>
@@ -64,7 +64,7 @@
                                 Question # 2
                             </div>
                         </ng-template>                     
-                        <input class='spotbie-input' formControlName="spotbie_question_2" maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_question_2" maxlength="60" />                        
                     </td>
                 </tr>
                 <tr>
@@ -82,7 +82,7 @@
                                 Answer # 2
                             </div>
                         </ng-template>                  
-                        <input class='spotbie-input' formControlName="spotbie_answer_2" maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_answer_2" maxlength="60" />                        
                     </td>
                 </tr>
                 <tr>
@@ -100,7 +100,7 @@
                                 Question # 3
                             </div>
                         </ng-template>                     
-                        <input class='spotbie-input' formControlName="spotbie_question_1" maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_question_1" maxlength="60" />                        
                     </td>
                 </tr>
                 <tr>
@@ -118,7 +118,7 @@
                                 Answer # 3
                             </div>
                         </ng-template>                  
-                        <input class='spotbie-input' formControlName="spotbie_answer_3" maxlength="60" />                        
+                        <input class='sb-input' formControlName="spotbie_answer_3" maxlength="60" />                        
                     </td>
                 </tr>
             </table>
@@ -154,8 +154,8 @@
 
 
 
-            <div class='spotbie-button spotbie-button-mini' (click)="saveQuestions()">Save Questions</div>
-            <div class='spotbie-button spotbie-button-mini' (click)="closeWindow()">Close</div>
+            <div class='sb-button sb-button-mini' (click)="saveQuestions()">Save Questions</div>
+            <div class='sb-button sb-button-mini' (click)="closeWindow()">Close</div>
 
         </form>
 
