--- a/src/app/spotbie/spotbie-logged-in/driver-mode/driver-mode.component.html
+++ b/src/app/spotbie/spotbie-logged-in/driver-mode/driver-mode.component.html
@@ -5,5 +5,5 @@
     <div class='spotbie-coming-soon-desc'>
         The Drive Mode app will allow you to notify your friends that you are driving.
     </div>    
-    <div class="spotbie-close-button" (click)="closeWindow()">close drive mode</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close drive mode</div>
 </div>
