--- a/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/around-me/around-me.component.html
@@ -24,7 +24,7 @@
 
 </div>
 
-<div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_around_me" (click)="loadMoreAroundMe()">
+<div class='spotbie-load-more-button sb-button' *ngIf="load_more_around_me" (click)="loadMoreAroundMe()">
     Load More
 </div>
 
