--- a/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/my-friends/friend-actions/friend-actions.component.html
@@ -22,15 +22,15 @@
     
     <div class='spotbie-friend-action-buttons'>
 
-        <div class='spotbie-button' (click)="viewProfile()">View Profile</div>
+        <div class='sb-button' (click)="viewProfile()">View Profile</div>
 
-        <div class='spotbie-button' (click)="unfriend()">Unfriend</div>
+        <div class='sb-button' (click)="unfriend()">Unfriend</div>
 
-        <div class='spotbie-button' (click)="blockUser()">Block</div>
+        <div class='sb-button' (click)="blockUser()">Block</div>
 
-        <div class='spotbie-button' (click)="reportReasonsWindow()">Report</div>
+        <div class='sb-button' (click)="reportReasonsWindow()">Report</div>
 
-        <div class="spotbie-close-button" (click)="closeWindow()"><i class="fa fa-times"></i></div>
+        <div class="sb-closeButton" (click)="closeWindow()"><i class="fa fa-times"></i></div>
 
     </div>
 
