--- a/src/app/spotbie/spotbie-logged-in/friends/my-friends/my-friends.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/my-friends/my-friends.component.html
@@ -26,7 +26,7 @@
 
 </div>
 
-<div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_friends" (click)="loadMoreFriends()">
+<div class='spotbie-load-more-button sb-button' *ngIf="load_more_friends" (click)="loadMoreFriends()">
     Load More
 </div>
 
