--- a/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friends.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/pending-friends/pending-friends.component.html
@@ -16,7 +16,7 @@
     </div>    
 </div>
 
-<div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_pending" (click)="loadMorePending()">
+<div class='spotbie-load-more-button sb-button' *ngIf="load_more_pending" (click)="loadMorePending()">
     Load More
 </div>
 
