--- a/src/app/spotbie/spotbie-logged-in/matcher/matcher.component.html
+++ b/src/app/spotbie/spotbie-logged-in/matcher/matcher.component.html
@@ -5,5 +5,5 @@
     <div class='spotbie-coming-soon-desc'>
         The SpotBie Matcher will allow you to find people who have the same interests as you.
     </div>    
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close</div>
 </div>
