--- a/src/app/spotbie/spotbie-logged-in/media_player/media-player-main/media-player-main.component.html
+++ b/src/app/spotbie/spotbie-logged-in/media_player/media-player-main/media-player-main.component.html
@@ -68,6 +68,6 @@
 
     </div>-->
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close media</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close media</div>
 
 </div>
