--- a/src/app/spotbie/spotbie-logged-in/missing-people/missing-people.component.html
+++ b/src/app/spotbie/spotbie-logged-in/missing-people/missing-people.component.html
@@ -5,5 +5,5 @@
     <div class='spotbie-coming-soon-desc'>
         The NamUs API will help solve missing, unidentified, and unclaimed person cases throughout the United States.
     </div>    
-    <div class="spotbie-close-button" (click)="closeWindow()">close namus</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close namus</div>
 </div>
