--- a/src/app/spotbie/spotbie-logged-in/notifications/notifications.component.html
+++ b/src/app/spotbie/spotbie-logged-in/notifications/notifications.component.html
@@ -38,6 +38,6 @@
 
     </div>
     
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close</div>
 
 </div>
