--- a/src/app/spotbie/spotbie-logged-in/notifications/tag-notifications/tag-notifications.component.html
+++ b/src/app/spotbie/spotbie-logged-in/notifications/tag-notifications/tag-notifications.component.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_notifications" (click)="loadMoreNotifications()">Load More</div>
+    <div class='spotbie-load-more-button sb-button' *ngIf="load_more_notifications" (click)="loadMoreNotifications()">Load More</div>
 
     <div class='spotbie-no-notis-box' *ngIf='no_notis'>
         <div>
