--- a/src/app/spotbie/spotbie-logged-in/pairing/pairing.component.html
+++ b/src/app/spotbie/spotbie-logged-in/pairing/pairing.component.html
@@ -33,5 +33,5 @@
         The Location Pairing app will help you stay close to the people you love the most by allowing you pair locations with them. Don't worry, you willbe able to
         stop location pairs at anytime you want.
     </div>    
-    <div class="spotbie-close-button" (click)="closeWindow()">close location pairing</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close location pairing</div>
 </div>
