--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -32,7 +32,7 @@ h2{
     max-width: 102%;    
     z-index: 9999998;
 }
-.spotbie-close-button{
+.sb-closeButton{
     z-index: 9999999;
 }
 .spotbie-paragraph{
@@ -43,7 +43,7 @@ h2{
     background-color: rgb(12, 12, 12);
     z-index: 9999998;
 }
-.spotbie-close-button{
+.sb-closeButton{
     z-index: 9999999;
 }
 
@@ -56,14 +56,14 @@ h2{
 .spotbie-paragraph{
     background-color: rgb(12, 12, 12);
 }
-.spotbie-input{
+.sb-input{
     width: 400px;
     min-width: 400px;
     max-width: 400px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.spotbie-button{
+.sb-button{
     width: 350px;
     min-width: 350px;
     max-width: 350px;   
@@ -125,7 +125,7 @@ h2{
         min-width: 95%;
         max-width: 95%;        
     }    
-    .spotbie-button{
+    .sb-button{
         width: 80%;
         min-width: 80%;
         max-width: 80%;
@@ -143,7 +143,7 @@ h2{
         min-width: 85%;
         max-width: 85%;
     }
-    .spotbie-input{
+    .sb-input{
         width: 75%;
         min-width: 75%;
         max-width: 75%;        
