--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <app-loading-screen *ngIf="loading"></app-loading-screen>
 
-<div class="spotbie-close-button" (click)="closeWindowX()">
+<div class="sb-closeButton" (click)="closeWindowX()">
   <i class="fa fa-times"></i>
 </div>
 
@@ -44,12 +44,12 @@
 
     </ng-template>    
 
-    <input class="spotbie-input"
+    <input class="sb-input"
           formControlName="spotbie_email_or_ph" 
           type="text" 
           placeholder="Phone Number or E-Mail"/>
 
-    <button class="spotbie-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
+    <button class="sb-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
       Send Reset Link
     </button>
 
@@ -101,7 +101,7 @@
                         
                     </ng-template>       
 
-                    <input class="spotbie-input" (click)="$event.target.select()" 
+                    <input class="sb-input" (click)="$event.target.select()" 
                           formControlName="spotbieResetPassword" 
                           type="password" 
                           value="password"
@@ -133,7 +133,7 @@
                       </div>
                   </ng-template>
 
-                  <input class="spotbie-input" (click)="$event.target.select()" 
+                  <input class="sb-input" (click)="$event.target.select()" 
                           formControlName="spotbieResetPasswordC" 
                           type="password" 
                           value="newpassword" 
@@ -145,7 +145,7 @@
             </tr>
     
             <tr>
-                <td class='spotbie-button' (click)="completeSavePassword()">
+                <td class='sb-button' (click)="completeSavePassword()">
                     Save New Password
                 </td>
             </tr>
