--- a/src/app/spotbie/spotbie-logged-out/tutorial/tutorial.component.html
+++ b/src/app/spotbie/spotbie-logged-out/tutorial/tutorial.component.html
@@ -136,4 +136,4 @@
 </div>
 
 
-<div class="spotbie-close-button" (click)="closeWindow()">close</div>
+<div class="sb-closeButton" (click)="closeWindow()">close</div>
