--- a/src/app/streamer/post-report/post-report.component.html
+++ b/src/app/streamer/post-report/post-report.component.html
@@ -14,8 +14,8 @@
 
     <table class="spotbie-bottom-button-bar">
         <tr>
-            <td class="spotbie-button spotbie-td-button" (click)="sendReport()">report</td>
-            <td class="spotbie-button spotbie-td-button" (click)="closeWindowX()">cancel</td>
+            <td class="sb-button spotbie-td-button" (click)="sendReport()">report</td>
+            <td class="sb-button spotbie-td-button" (click)="closeWindowX()">cancel</td>
         </tr>
     </table>
 
