--- a/src/app/streamer/reposter/reposter.component.html
+++ b/src/app/streamer/reposter/reposter.component.html
@@ -8,8 +8,8 @@
     
     <table class="spotbie-bottom-button-bar">
         <tr>
-            <td class="spotbie-button spotbie-td-button" (click)="repostIt()">repost</td>
-            <td class="spotbie-button spotbie-td-button" (click)="closeWindowX()">close</td>
+            <td class="sb-button spotbie-td-button" (click)="repostIt()">repost</td>
+            <td class="sb-button spotbie-td-button" (click)="closeWindowX()">close</td>
         </tr>
     </table>
 
