--- a/src/app/streamer/stream-post-editor/stream-post-editor.component.css
+++ b/src/app/streamer/stream-post-editor/stream-post-editor.component.css
@@ -23,7 +23,7 @@
     cursor: pointer;
     border-radius: 10px;
 }
-.spotbie-textarea{
+textarea{
     width: 100%;
     min-width: 100%;
     max-width: 100%;
