--- a/src/app/streamer/stream-post/stream-post.component.html
+++ b/src/app/streamer/stream-post/stream-post.component.html
@@ -220,7 +220,7 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeLikesList()">close</div>
+    <div class="sb-closeButton" (click)="closeLikesList()">close</div>
 
 </div>
 
