--- a/src/app/streamer/stream-poster/stream-poster.component.html
+++ b/src/app/streamer/stream-poster/stream-poster.component.html
@@ -155,12 +155,12 @@
 
         </div>
 
-        <div class='spotbie-button'(click)="postToStream()" *ngIf="input_flag == 'post'">POST</div>
+        <div class='sb-button'(click)="postToStream()" *ngIf="input_flag == 'post'">POST</div>
 
         <table class="spotbie-bottom-button-bar" *ngIf="input_flag == 'edit'">
             <tr>
-                <td class="spotbie-button spotbie-td-button" (click)="saveEdit()">save</td>
-                <td class="spotbie-button spotbie-td-button" (click)="closeWindowX()">close</td>
+                <td class="sb-button spotbie-td-button" (click)="saveEdit()">save</td>
+                <td class="sb-button spotbie-td-button" (click)="closeWindowX()">close</td>
             </tr>
         </table>
 
