--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,10 @@
-.backgroundImg{
-    position: fixed;
-    top: 0%;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    background: url(/assets/images/background.png);
-    background-position: center;
-}
 .spotbie-main-holder{
     z-index: 99999;
     padding-top: 60px;
+}
+
+.sb-backgroundImg {
+
+    background: url(/assets/images/background.png)
+
 }
