--- a/src/app/spotbie/profile-header/albums/edit-media/edit-media.component.css
+++ b/src/app/spotbie/profile-header/albums/edit-media/edit-media.component.css
@@ -20,7 +20,7 @@
     margin-bottom: 30px;
     cursor: pointer;
 }
-.spotbie-input{
+.sb-input{
     width: 550px;
     min-width: 550px;
     max-width: 550px;
@@ -115,7 +115,7 @@ color: white;
 ::placeholder {
 color: white;
 }
-.spotbie-button{
+.sb-button{
     margin-top: 0px;
     margin-bottom: 40px;
     background-color: rgba(122, 122, 122, 0.83);
@@ -165,7 +165,7 @@ color: white;
     }
 }
 @media (max-width: 560px){
-    .spotbie-close-button{
+    .sb-closeButton{
         max-width: 80px;
         padding-top: 10px;
         padding-bottom: 10px;
