--- a/src/app/spotbie/profile-header/albums/view-media/view-media.component.css
+++ b/src/app/spotbie/profile-header/albums/view-media/view-media.component.css
@@ -19,7 +19,7 @@
     margin-bottom: 30px;
     cursor: pointer;
 }
-.spotbie-input{
+.sb-input{
     width: 550px;
     min-width: 550px;
     max-width: 550px;
