--- a/src/app/spotbie/profile-header/contactme/contactme.component.css
+++ b/src/app/spotbie/profile-header/contactme/contactme.component.css
@@ -34,7 +34,7 @@
     min-width: 10%;
     max-width: 10%;
 }
-.spotbie-input{
+.sb-input{
     width: 92%;
     min-width: 92%;
     max-width: 92%;
