--- a/src/app/spotbie/profile-header/profile-header.component.css
+++ b/src/app/spotbie/profile-header/profile-header.component.css
@@ -4,6 +4,7 @@
     width: 100%;
     min-width: 100%;
     max-width: 100%;
+    margin-top: 64px;
     background-color: rgba(0,0,0,.23);
     background-position: center !important;
     background-repeat: no-repeat !important;
@@ -232,7 +233,7 @@ swiper{
     opacity: 0;
     display: none;
 }
-.spotbie-textarea{
+textarea{
     font-size: 16px;
     line-height: 30px;
     padding-left: 20px;
