--- a/src/app/spotbie/profile-header/questions-answer/questions-answer.component.css
+++ b/src/app/spotbie/profile-header/questions-answer/questions-answer.component.css
@@ -6,7 +6,7 @@
     max-width: 90%;
     background-color: rgba(0,0,0,.23);
 }
-.spotbie-input{
+.sb-input{
     width: 400px;
     min-width: 400px;
     max-width: 400px;
