--- a/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-users.component.html
+++ b/src/app/spotbie/spotbie-logged-in/friends/blocked-users/blocked-users.component.html
@@ -16,7 +16,7 @@
     </div>    
 </div>
 
-<div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_blocked" (click)="loadMoreBlocked()">
+<div class='spotbie-load-more-button sb-button' *ngIf="load_more_blocked" (click)="loadMoreBlocked()">
     Load More
 </div>
 
