--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -74,7 +74,7 @@
       <app-search></app-search>
     </div>
   
-    <div class="spotbie-close-button" (click)="closeApps()">close</div>
+    <div class="sb-closeButton" (click)="closeApps()">close</div>
   
   </div>
 
