--- a/src/app/spotbie/spotbie-logged-in/msg-notifications/msg-notifications.component.html
+++ b/src/app/spotbie/spotbie-logged-in/msg-notifications/msg-notifications.component.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <div class='spotbie-load-more-button spotbie-button' *ngIf="load_more_notifications" (click)="loadMoreNotifications()">Load More</div>
+    <div class='spotbie-load-more-button sb-button' *ngIf="load_more_notifications" (click)="loadMoreNotifications()">Load More</div>
 
     <div class='spotbie-no-notis-box' *ngIf="msgs_list.length == 0">
         <div>
