--- a/src/app/spotbie/spotbie-logged-out/last-logged/last-logged.component.html
+++ b/src/app/spotbie/spotbie-logged-out/last-logged/last-logged.component.html
@@ -1,6 +1,6 @@
 <div class="spotbie-overlay-window"> 
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="sb-closeButton" (click)="closeWindow()">close</div>
     
     <div class="spotbie-last-logged-table-holder">
 
