--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -40,7 +40,7 @@
 
                 </ng-template>    
 
-                <input class='spotbie-input signUpInput' type='text' id='spotbie_username' formControlName="spotbieUsername" placeholder='Username' autocomplete="username"/>
+                <input class='sb-input signUpInput' type='text' id='spotbie_username' formControlName="spotbieUsername" placeholder='Username' autocomplete="username"/>
 
             </div>
 
@@ -66,7 +66,7 @@
 
                 </ng-template>    
 
-                <input class='spotbie-input signUpInput' type='text' id='user_first_name' formControlName="spotbieFirstName" placeholder='First Name' autocomplete="given-name"/>
+                <input class='sb-input signUpInput' type='text' id='user_first_name' formControlName="spotbieFirstName" placeholder='First Name' autocomplete="given-name"/>
 
             </div>
 
@@ -92,7 +92,7 @@
 
                 </ng-template>   
 
-                <input class='spotbie-input signUpInput' type='text' id='user_last_name' formControlName="spotbieLastName" placeholder='Last Name' autocomplete="family-name"/>
+                <input class='sb-input signUpInput' type='text' id='user_last_name' formControlName="spotbieLastName" placeholder='Last Name' autocomplete="family-name"/>
 
             </div>                                     
 
@@ -122,7 +122,7 @@
 
                 </ng-template> 
 
-                <input class='spotbie-input signUpInput' (keyup)="removeWhiteSpace('spotbieEmail')" type='text' id='user_email' formControlName="spotbieEmail" placeholder='E-mail Address' autocomplete="email"/>
+                <input class='sb-input signUpInput' (keyup)="removeWhiteSpace('spotbieEmail')" type='text' id='user_email' formControlName="spotbieEmail" placeholder='E-mail Address' autocomplete="email"/>
 
             </div>                 
 
@@ -160,7 +160,7 @@
 
                 </ng-template>     
 
-                <input class='spotbie-input signUpInput' type='password' formControlName="spotbiePassword" id='user_pass' autocomplete="new-password" placeholder='Password'/>
+                <input class='sb-input signUpInput' type='password' formControlName="spotbiePassword" id='user_pass' autocomplete="new-password" placeholder='Password'/>
                 
             </div>                
 
@@ -184,7 +184,7 @@
                     </label>  
                 </ng-template>    
 
-                <input class='spotbie-input signUpInput' type='password' formControlName="spotbieConfirm" id='user_pass_confirm' placeholder='Confirm Password' />
+                <input class='sb-input signUpInput' type='password' formControlName="spotbieConfirm" id='user_pass_confirm' placeholder='Confirm Password' />
 
             </div>                           
             
@@ -214,7 +214,7 @@
 
                 </ng-template>  
 
-                <input class='spotbie-input signUpInput' type='text' id='user_phone' mask="(000) 000-0000" autocomplete="tel" placeholder='(555) 555-5555' formControlName="spotbiePhone"/>
+                <input class='sb-input signUpInput' type='text' id='user_phone' mask="(000) 000-0000" autocomplete="tel" placeholder='(555) 555-5555' formControlName="spotbiePhone"/>
 
             </div>   
 
@@ -245,7 +245,7 @@
           <br/>
           Your e-mail: <span id='email_x_vo' class='successBoxNames'></span>
           
-          <div class='spotbie-button spotbie-button-mini' (click)="finishSignUp();">Finish</div>
+          <div class='sb-button sb-button-mini' (click)="finishSignUp();">Finish</div>
           
       </div>                    
       
@@ -253,6 +253,6 @@
 
 </div>
 
-<div class="spotbie-close-button" (click)="closeWindowX()">
+<div class="sb-closeButton" (click)="closeWindowX()">
     <i class="fa fa-times"></i>
 </div>
