--- a/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
+++ b/src/app/spotbie/spotbie-logged-out/welcome/welcome.component.html
@@ -19,7 +19,7 @@
                 Spotbie uses your location to find nearby users, retail shops, places to eat, and events.
             </p>
 
-            <div class='spotbie-button' (click)="switchCard()">Let's Go!</div>
+            <div class='sb-button' (click)="switchCard()">Let's Go!</div>
 
         </div>
 
