--- a/src/app/streamer/delete-post/delete-post.component.html
+++ b/src/app/streamer/delete-post/delete-post.component.html
@@ -8,8 +8,8 @@
     
     <table class="spotbie-bottom-button-bar">
         <tr>
-            <td class='spotbie-button spotbie-td-button' (click)="deleteIt()">delete it</td>
-            <td class="spotbie-button spotbie-td-button" (click)="closeWindowX()">cancel</td>
+            <td class='sb-button spotbie-td-button' (click)="deleteIt()">delete it</td>
+            <td class="sb-button spotbie-td-button" (click)="closeWindowX()">cancel</td>
         </tr>
     </table>
 
