--- a/src/app/streamer/post-share/post-share.component.css
+++ b/src/app/streamer/post-share/post-share.component.css
@@ -20,7 +20,7 @@
     margin-bottom: 30px;
     cursor: pointer;
 }
-.spotbie-input{
+.sb-input{
     width: 550px;
     min-width: 550px;
     max-width: 550px;
@@ -65,7 +65,7 @@
 
 }
 @media (max-width: 560px) { 
-    .spotbie-input{
+    .sb-input{
         max-width: 80%;
         width: 80%;
         min-width: 80%;
