--- a/src/app/streamer/stream-post/stream-post.component.css
+++ b/src/app/streamer/stream-post/stream-post.component.css
@@ -2,7 +2,7 @@
     padding-bottom: 90px;
     text-align: left;
 }
-.spotbie-button{
+.sb-button{
     background-color: rgba(0,0,0,.23);
 }
 .spotbie-repost-title{
@@ -28,7 +28,7 @@
     margin-bottom: 30px;
     cursor: pointer;
 }
-.spotbie-input{
+.sb-input{
     width: 550px;
     min-width: 550px;
     max-width: 550px;
